[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "commune-mail"
version = "0.2.0"
description = "Email infrastructure for agents — set up an inbox and send your first email in 30 seconds. Programmatic inboxes (~1 line), consistent threads, custom domains, attachments, and structured data."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Commune", email = "hello@commune.sh" }]
keywords = ["email", "ai", "agent", "inbox", "api", "threads", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://commune.sh"
Documentation = "https://docs.commune.sh"
Repository = "https://github.com/shanjairaj7/commune-python"
Changelog = "https://github.com/shanjairaj7/commune-python/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["commune"]

[tool.pytest.ini_options]
testpaths = ["tests"]
